[gd_scene load_steps=14 format=2]

[ext_resource path="res://asset/ui/bar/bar.png" type="Texture" id=1]
[ext_resource path="res://asset/scene/game_ui/game_ui.gd" type="Script" id=2]
[ext_resource path="res://asset/ui/icons/target_sword.png" type="Texture" id=3]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://asset/util/mobile_camera.gd" type="Script" id=5]
[ext_resource path="res://asset/ui/formation/standar_formation.png" type="Texture" id=6]
[ext_resource path="res://asset/ui/formation/spread_formation.png" type="Texture" id=7]
[ext_resource path="res://asset/ui/formation/compact_formation.png" type="Texture" id=8]
[ext_resource path="res://asset/ui/selection/deselect_all.png" type="Texture" id=9]
[ext_resource path="res://asset/ui/selection/select_all.png" type="Texture" id=10]
[ext_resource path="res://asset/scene/game_ui/squad_panel_detail/squad_panel_detail.tscn" type="PackedScene" id=11]
[ext_resource path="res://asset/ui/selection/select_stop.png" type="Texture" id=12]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=13]

[node name="game_ui" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512.721, 298.249 )
current = true
zoom = Vector2( 1.5, 1.5 )
script = ExtResource( 5 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 512.731, 300.019 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.764706 )
anchor_right = 1.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 483.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 2
__meta__ = {
"_editor_description_": ""
}

[node name="left_bar" type="TextureProgress" parent="CanvasLayer/HBoxContainer/MarginContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 483.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
texture_progress = ExtResource( 1 )
fill_mode = 1
nine_patch_stretch = true

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer"]
margin_right = 483.0
margin_bottom = 40.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = ExtResource( 13 )
text = "25"
align = 1
valign = 1
clip_text = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
margin_left = 487.0
margin_right = 537.0
margin_bottom = 50.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 3 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
self_modulate = Color( 0.0784314, 0, 1, 1 )
margin_left = 541.0
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 2
__meta__ = {
"_editor_description_": ""
}

[node name="right_bar" type="TextureProgress" parent="CanvasLayer/HBoxContainer/MarginContainer2"]
self_modulate = Color( 0.0784314, 0, 1, 1 )
margin_right = 483.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
texture_progress = ExtResource( 1 )
nine_patch_stretch = true

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer2"]
margin_right = 483.0
margin_bottom = 40.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = ExtResource( 13 )
text = "25"
align = 1
valign = 1
clip_text = true

[node name="battle_ui_main" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -172.0
rect_min_size = Vector2( 350, 172 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 9
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer4" type="PanelContainer" parent="CanvasLayer/HBoxContainer3"]
self_modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 337.0
margin_right = 401.0
margin_bottom = 172.0
size_flags_horizontal = 4
size_flags_vertical = 9
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer3/HBoxContainer4"]
margin_left = 7.0
margin_top = 7.0
margin_right = 57.0
margin_bottom = 165.0
size_flags_horizontal = 0
size_flags_vertical = 3
alignment = 1

[node name="Button_select_all" type="Button" parent="CanvasLayer/HBoxContainer3/HBoxContainer4/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 3
icon = ExtResource( 10 )
flat = true
expand_icon = true

[node name="Button_deselect_all" type="Button" parent="CanvasLayer/HBoxContainer3/HBoxContainer4/HBoxContainer"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 3
icon = ExtResource( 9 )
flat = true
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="Button_stop_unit" type="Button" parent="CanvasLayer/HBoxContainer3/HBoxContainer4/HBoxContainer"]
margin_top = 108.0
margin_right = 50.0
margin_bottom = 158.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 3
icon = ExtResource( 12 )
flat = true
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer2" type="PanelContainer" parent="CanvasLayer/HBoxContainer3"]
self_modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 405.0
margin_right = 619.0
margin_bottom = 172.0
size_flags_horizontal = 4
size_flags_vertical = 9

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer3/HBoxContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 165.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="PanelContainer" parent="CanvasLayer/HBoxContainer3"]
self_modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 623.0
margin_right = 687.0
margin_bottom = 172.0
size_flags_horizontal = 4
size_flags_vertical = 9
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer3/HBoxContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 57.0
margin_bottom = 165.0
size_flags_horizontal = 0
size_flags_vertical = 2
alignment = 1

[node name="Button_fromation_standar" type="Button" parent="CanvasLayer/HBoxContainer3/HBoxContainer3/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 0
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="Button_fromation_spread" type="Button" parent="CanvasLayer/HBoxContainer3/HBoxContainer3/HBoxContainer"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 0
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="Button_fromation_compact" type="Button" parent="CanvasLayer/HBoxContainer3/HBoxContainer3/HBoxContainer"]
margin_top = 108.0
margin_right = 50.0
margin_bottom = 158.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 0
icon = ExtResource( 8 )
flat = true
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="squad_panel_detail" parent="CanvasLayer" instance=ExtResource( 11 )]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -219.0
margin_right = 300.0
margin_bottom = -1.0

[node name="VBoxContainer2" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer2/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 502.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Battle is over!"
align = 1
valign = 1

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer2/VBoxContainer"]
margin_top = 506.0
margin_right = 1010.0
margin_bottom = 586.0
rect_min_size = Vector2( 80, 80 )
custom_fonts/font = ExtResource( 4 )
text = "Replay"
[connection signal="gui_input" from="CanvasLayer/battle_ui_main" to="." method="_on_Control_gui_input"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer3/HBoxContainer4/HBoxContainer/Button_select_all" to="." method="_on_Button_select_all_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer3/HBoxContainer4/HBoxContainer/Button_deselect_all" to="." method="_on_Button_deselect_all_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer3/HBoxContainer4/HBoxContainer/Button_stop_unit" to="." method="_on_Button_stop_unit_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer3/HBoxContainer3/HBoxContainer/Button_fromation_standar" to="." method="_on_Button_fromation_standar_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer3/HBoxContainer3/HBoxContainer/Button_fromation_spread" to="." method="_on_Button_fromation_spread_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer3/HBoxContainer3/HBoxContainer/Button_fromation_compact" to="." method="_on_Button_fromation_compact_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer2/VBoxContainer/Button" to="." method="_on_Button_pressed"]
